# Shifter

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
config/: gost.service
docs/: README.md  index.md  installation.md  release-checklist.md  services.md  usage.md  web-ui.md
scripts/: __init__.py  config.py  gost.py  haproxy.py  install.sh  iptables.py  status.py  xray.py
src/shifter/: __init__.py  __main__.py  cli.py
src/shifter/data/: __init__.py  haproxy.cfg
src/shifter/services/: __init__.py  config.py  gost.py  haproxy.py  status.py  system_info.py  xray.py
src/shifter/web/: __init__.py  app.py  auth.py  routes.py
src/shifter/web/templates/: base.html  configure.html  index.html  login.html
web/: app.py  routes.py
web/templates/: configure.html  index.html
