[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "port-shifter"
version = "0.1.0"
description = "CLI toolkit for managing network tunnels and services"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Port Shifter Maintainers" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.25",
    "click>=8.0",
    "aiohttp>=3.8",
    "aiohttp_jinja2>=1.5",
    "jinja2>=3.0"
]

[project.scripts]
shifter = "cli:cli"

[tool.setuptools]
py-modules = ["cli"]
packages = ["scripts", "web"]